# haskell-evaluation

./: .gitignore  haskell-evaluation.cabal  readme.org  shell.nix
src/: Evaluation.hs  talk.org
