name:                haskell-evaluation
version:             0.0.1
license:             AllRightsReserved
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Evaluation
  build-depends:
                     base,
                     deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010
